# nix-templates

./: .gitignore  default.nix  flake.nix
.github/workflows/: android.yml
android-kotlin/: .gitignore  README.md  dev.sh  flake.nix  gradle.properties  settings.gradle.kts
android-kotlin/.github/workflows/: ci.yml
android-kotlin/app/: build.gradle.kts  proguard-rules.pro
android-kotlin/app/src/androidTest/java/com/example/app/: ExampleInstrumentedTest.kt
android-kotlin/app/src/main/: AndroidManifest.xml
android-kotlin/app/src/main/java/com/example/app/: MainActivity.kt
android-kotlin/app/src/main/java/com/example/todo/: MainActivity.kt  TodoLogic.kt
android-kotlin/app/src/main/res/values/: strings.xml  themes.xml
android-kotlin/app/src/test/java/com/example/app/: ExampleUnitTest.kt
android-kotlin/app/src/test/java/com/example/todo/: TodoLogicTest.kt
android-kotlin/gradle/: libs.versions.toml
cpp/: .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cpp-jetson/: CMakeLists.txt  flake.nix
cpp-modern/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cpp-modern/src/: main.cpp
cpp-modern/src/modules/: my_module.cpp
cpp-modern/tests/: main_test.cpp
node/: .npmignore  flake.nix  package.json  tsconfig.build.json  tsconfig.json
node-rest-api/: flake.nix  package-lock.json  package.json  tsconfig.json  vitest.setup.ts
node-rest-api/src/: index.ts
node-rest-api/src/config/: config.ts
node-rest-api/src/middleware/: corsHandler.ts  errorHandler.ts  loggingHandler.ts  routeNotFound.ts
node-rest-api/test/: index.test.ts
node/src/: index.ts
node/test/: example.test.ts
python-jetson/: .gitignore  flake.nix
python-jetson/src/jetson_project/: __init__.py  main.py
rust/: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix
rust/src/: main.rs
shell/: flake.nix
typst/: .gitignore  flake.nix
typst/docs/: example.typ
